--- a/docs/meetups/2025/202501-enero.md
+++ b/docs/meetups/2025/202501-enero.md
@@ -74,9 +74,9 @@ tags:
             <p style="margin: 0 0 1rem 0; font-size: 1rem; color: #666;">Desarrollador LibreOffice</p>
             <p style="margin: 0 0 1rem 0; line-height: 1.6; color: #555;">Especialista en desarrollo de extensiones para LibreOffice y automatización de oficina.</p>
             <div class="speaker-links">
-                
-                
-                
+
+
+
             </div>
         </div>
     </div>
@@ -84,26 +84,26 @@ tags:
     <div class="talk-description" style="background: white; padding: 2rem; border-left: 6px solid #28a745;">
         <p style="line-height: 1.8; font-size: 1.1rem; margin-bottom: 1.5rem; color: #333;">Aprende a potenciar LibreOffice creando extensiones personalizadas con Python. Descubre las herramientas y técnicas para desarrollar complementos que automaticen tareas y añadan nuevas funcionalidades.</p>
 
-        
+
         <div class="tech-stack" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 1rem; margin: 1.5rem 0;">
-            
+
             <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #18A303;">
                 <h5 style="margin: 0 0 0.5rem 0; color: #18A303; font-size: 1rem;"><i class="fas fa-file-alt"></i> LibreOffice</h5>
                 <p style="margin: 0; font-size: 0.85rem; color: #666;">Suite de oficina</p>
             </div>
-            
+
             <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #3776AB;">
                 <h5 style="margin: 0 0 0.5rem 0; color: #3776AB; font-size: 1rem;"><i class="fab fa-python"></i> Python</h5>
                 <p style="margin: 0; font-size: 0.85rem; color: #666;">Lenguaje de scripting</p>
             </div>
-            
+
             <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #6c757d;">
                 <h5 style="margin: 0 0 0.5rem 0; color: #6c757d; font-size: 1rem;"><i class="fas fa-cog"></i> Automation</h5>
                 <p style="margin: 0; font-size: 0.85rem; color: #666;">Automatización</p>
             </div>
-            
+
         </div>
-        
+
 
         <p style="line-height: 1.8; font-size: 1.1rem; margin-top: 1.5rem; color: #333; font-style: italic;">Python permite extender LibreOffice de manera poderosa y flexible para automatizar tareas complejas.</p>
     </div>
@@ -124,9 +124,9 @@ tags:
             <p style="margin: 0 0 1rem 0; font-size: 1rem; color: #666;">Security Engineer</p>
             <p style="margin: 0 0 1rem 0; line-height: 1.6; color: #555;">Especialista en seguridad informática y cumplimiento normativo con experiencia en PCI DSS y aplicaciones Python.</p>
             <div class="speaker-links">
-                
-                
-                
+
+
+
             </div>
         </div>
     </div>
@@ -134,31 +134,31 @@ tags:
     <div class="talk-description" style="background: white; padding: 2rem; border-left: 6px solid #28a745;">
         <p style="line-height: 1.8; font-size: 1.1rem; margin-bottom: 1.5rem; color: #333;">Platicaremos de alinear las aplicaciones Python con los requisitos de PCI, garantizando controles de seguridad y la preparación para el cumplimiento de la normativa en el manejo de datos. Platicaremos de prácticas de codificación segura, metodologías de cifrado, controles de acceso y otros controles. Tópicos: Introducción básica a PCI, Codificación segura en Python, Cifrado de datos en tránsito y en reposo, incluyendo alternativas de tokenización de datos, Docker images como método para usar código inmutable, Controles de acceso orientados a AWS, Bitácoras seguras de cambios y de información de ejecución.</p>
 
-        
+
         <div class="tech-stack" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 1rem; margin: 1.5rem 0;">
-            
+
             <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #dc3545;">
                 <h5 style="margin: 0 0 0.5rem 0; color: #dc3545; font-size: 1rem;"><i class="fas fa-lock"></i> PCI DSS</h5>
                 <p style="margin: 0; font-size: 0.85rem; color: #666;">Estándar de seguridad</p>
             </div>
-            
+
             <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #28a745;">
                 <h5 style="margin: 0 0 0.5rem 0; color: #28a745; font-size: 1rem;"><i class="fas fa-shield-alt"></i> Security</h5>
                 <p style="margin: 0; font-size: 0.85rem; color: #666;">Seguridad informática</p>
             </div>
-            
+
             <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #2496ED;">
                 <h5 style="margin: 0 0 0.5rem 0; color: #2496ED; font-size: 1rem;"><i class="fab fa-docker"></i> Docker</h5>
                 <p style="margin: 0; font-size: 0.85rem; color: #666;">Contenedores</p>
             </div>
-            
+
             <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #FF9900;">
                 <h5 style="margin: 0 0 0.5rem 0; color: #FF9900; font-size: 1rem;"><i class="fab fa-aws"></i> AWS</h5>
                 <p style="margin: 0; font-size: 0.85rem; color: #666;">Cloud security</p>
             </div>
-            
+
         </div>
-        
+
 
         <p style="line-height: 1.8; font-size: 1.1rem; margin-top: 1.5rem; color: #333; font-style: italic;">La seguridad y el cumplimiento normativo son fundamentales en aplicaciones Python que manejan datos sensibles.</p>
     </div>
@@ -191,19 +191,19 @@ tags:
 ## Temas y Tecnologías
 <div class="tags-section" style="margin: 2rem 0;">
     <div style="display: flex; flex-wrap: wrap; gap: 0.5rem; justify-content: center;">
-        
+
         <a href="/tags/python/" style="background: #3776AB; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fab fa-python"></i> Python</a>
-        
+
         <a href="/tags/libreoffice/" style="background: #18A303; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-file-alt"></i> LibreOffice</a>
-        
+
         <a href="/tags/security/" style="background: #dc3545; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-lock"></i> Security</a>
-        
+
         <a href="/tags/pci-dss/" style="background: #28a745; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-shield-alt"></i> PCI DSS</a>
-        
+
         <a href="/tags/automation/" style="background: #6c757d; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-cog"></i> Automation</a>
-        
+
         <a href="/tags/docker/" style="background: #2496ED; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fab fa-docker"></i> Docker</a>
-        
+
     </div>
 </div>
 
@@ -231,7 +231,7 @@ tags:
     <a href="https://www.youtube.com/@PythonMexico" style="background: #ff0000; color: white; padding: 1rem; border-radius: 12px; text-decoration: none; text-align: center; font-weight: 600; transition: all 0.3s ease; display: flex; align-items: center; justify-content: center; gap: 0.5rem;">
         <i class="fab fa-youtube"></i> YouTube
     </a>
-    <a href="https://github.com/python-cdmx" style="background: #333; color: white; padding: 1rem; border-radius: 12px; text-decoration: none; text-align: center; font-weight: 600; transition: all 0.3s ease; display: flex; align-items: center; justify-content: center; gap: 0.5rem;">
+    <a href="https://github.com/PythonMexico/pythonCDMX" style="background: #333; color: white; padding: 1rem; border-radius: 12px; text-decoration: none; text-align: center; font-weight: 600; transition: all 0.3s ease; display: flex; align-items: center; justify-content: center; gap: 0.5rem;">
         <i class="fab fa-github"></i> GitHub
     </a>
 </div>
