--- a/docs/meetups/2025/202503-marzo.md
+++ b/docs/meetups/2025/202503-marzo.md
@@ -74,9 +74,9 @@ tags:
             <p style="margin: 0 0 1rem 0; font-size: 1rem; color: #666;">AI Engineer</p>
             <p style="margin: 0 0 1rem 0; line-height: 1.6; color: #555;">Especialista en desarrollo de agentes de IA y machine learning con experiencia en LangGraph y LLMs.</p>
             <div class="speaker-links">
-                
-                
-                
+
+
+
             </div>
         </div>
     </div>
@@ -84,26 +84,26 @@ tags:
     <div class="talk-description" style="background: white; padding: 2rem; border-left: 6px solid #28a745;">
         <p style="line-height: 1.8; font-size: 1.1rem; margin-bottom: 1.5rem; color: #333;">Introducción práctica al desarrollo de agentes de IA usando Python, enfocada en implementaciones con LangGraph y herramientas open source. Los participantes aprenderán conceptos fundamentales de LLMs y cómo crear agentes inteligentes que puedan realizar tareas autónomas.</p>
 
-        
+
         <div class="tech-stack" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 1rem; margin: 1.5rem 0;">
-            
+
             <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #007bff;">
                 <h5 style="margin: 0 0 0.5rem 0; color: #007bff; font-size: 1rem;"><i class="fas fa-robot"></i> LangGraph</h5>
                 <p style="margin: 0; font-size: 0.85rem; color: #666;">Framework para agentes</p>
             </div>
-            
+
             <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #28a745;">
                 <h5 style="margin: 0 0 0.5rem 0; color: #28a745; font-size: 1rem;"><i class="fas fa-brain"></i> LLMs</h5>
                 <p style="margin: 0; font-size: 0.85rem; color: #666;">Large Language Models</p>
             </div>
-            
+
             <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #10a37f;">
                 <h5 style="margin: 0 0 0.5rem 0; color: #10a37f; font-size: 1rem;"><i class="fas fa-magic"></i> OpenAI</h5>
                 <p style="margin: 0; font-size: 0.85rem; color: #666;">API de IA</p>
             </div>
-            
+
         </div>
-        
+
 
         <p style="line-height: 1.8; font-size: 1.1rem; margin-top: 1.5rem; color: #333; font-style: italic;">Los agentes de IA representan el futuro del desarrollo de aplicaciones inteligentes y autónomas.</p>
     </div>
@@ -124,9 +124,9 @@ tags:
             <p style="margin: 0 0 1rem 0; font-size: 1rem; color: #666;">SRE Engineer</p>
             <p style="margin: 0 0 1rem 0; line-height: 1.6; color: #555;">David Sol creció en el siglo XX, y en su infancia sus padres le dejaban salir a la calle, sin supervisión, a jugar con quién encontrara y a lo que pudiera, con la única condición de que regresara para dormir. Una bicicleta bastaba para recorrer toda su colonia, sin importar carros, perros o baches. Tomaba agua de mangueras de vecinos, y comía lo que encontrara en sus aventuras. Sufrió cortadas, quemaduras, moretones y un hueso roto, los cuales trató a base de tierra fresca, agua y un par de curitas. Tuvo una infancia feliz. Actualmente labora como SRE en Wizeline.</p>
             <div class="speaker-links">
-                
-                
-                
+
+
+
             </div>
         </div>
     </div>
@@ -134,26 +134,26 @@ tags:
     <div class="talk-description" style="background: white; padding: 2rem; border-left: 6px solid #28a745;">
         <p style="line-height: 1.8; font-size: 1.1rem; margin-bottom: 1.5rem; color: #333;">¿Ya te cansaste de la consola? ¿Quieres hacer una aplicación con interfaz gráfica fuera del navegador, cómo en los buenos tiempos? Sí, lo puedes hacer con Python, con facilidad, elegancia y desempeño. PySide6 es la librería oficial para utilizar QT desde Python. Sí, utiliza Python. Sí, es fácil de aprender y utilizar. Sí, corre en Linux, MacOS e incluso en Windows. ¡Ven a conocerla!</p>
 
-        
+
         <div class="tech-stack" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 1rem; margin: 1.5rem 0;">
-            
+
             <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #41CD52;">
                 <h5 style="margin: 0 0 0.5rem 0; color: #41CD52; font-size: 1rem;"><i class="fas fa-desktop"></i> PySide6</h5>
                 <p style="margin: 0; font-size: 0.85rem; color: #666;">Qt para Python</p>
             </div>
-            
+
             <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #41CD52;">
                 <h5 style="margin: 0 0 0.5rem 0; color: #41CD52; font-size: 1rem;"><i class="fas fa-palette"></i> Qt</h5>
                 <p style="margin: 0; font-size: 0.85rem; color: #666;">Framework GUI</p>
             </div>
-            
+
             <div style="background: #f8f9fa; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1); border-left: 3px solid #6c757d;">
                 <h5 style="margin: 0 0 0.5rem 0; color: #6c757d; font-size: 1rem;"><i class="fas fa-laptop"></i> Desktop Apps</h5>
                 <p style="margin: 0; font-size: 0.85rem; color: #666;">Aplicaciones de escritorio</p>
             </div>
-            
+
         </div>
-        
+
 
         <p style="line-height: 1.8; font-size: 1.1rem; margin-top: 1.5rem; color: #333; font-style: italic;">PySide6 permite crear aplicaciones de escritorio profesionales con Python de manera sencilla y eficiente.</p>
     </div>
@@ -186,19 +186,19 @@ tags:
 ## Temas y Tecnologías
 <div class="tags-section" style="margin: 2rem 0;">
     <div style="display: flex; flex-wrap: wrap; gap: 0.5rem; justify-content: center;">
-        
+
         <a href="/tags/python/" style="background: #3776AB; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fab fa-python"></i> Python</a>
-        
+
         <a href="/tags/ai/" style="background: #007bff; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-robot"></i> AI</a>
-        
+
         <a href="/tags/pyside6/" style="background: #41CD52; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-desktop"></i> PySide6</a>
-        
+
         <a href="/tags/gui/" style="background: #ffc107; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-palette"></i> GUI</a>
-        
+
         <a href="/tags/langgraph/" style="background: #28a745; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-brain"></i> LangGraph</a>
-        
+
         <a href="/tags/desktop-apps/" style="background: #6c757d; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-laptop"></i> Desktop Apps</a>
-        
+
     </div>
 </div>
 
@@ -226,7 +226,7 @@ tags:
     <a href="https://www.youtube.com/@PythonMexico" style="background: #ff0000; color: white; padding: 1rem; border-radius: 12px; text-decoration: none; text-align: center; font-weight: 600; transition: all 0.3s ease; display: flex; align-items: center; justify-content: center; gap: 0.5rem;">
         <i class="fab fa-youtube"></i> YouTube
     </a>
-    <a href="https://github.com/python-cdmx" style="background: #333; color: white; padding: 1rem; border-radius: 12px; text-decoration: none; text-align: center; font-weight: 600; transition: all 0.3s ease; display: flex; align-items: center; justify-content: center; gap: 0.5rem;">
+    <a href="https://github.com/PythonMexico/pythonCDMX" style="background: #333; color: white; padding: 1rem; border-radius: 12px; text-decoration: none; text-align: center; font-weight: 600; transition: all 0.3s ease; display: flex; align-items: center; justify-content: center; gap: 0.5rem;">
         <i class="fab fa-github"></i> GitHub
     </a>
 </div>
