--- a/docs/meetups/2025/202506-junio.md
+++ b/docs/meetups/2025/202506-junio.md
@@ -68,8 +68,8 @@ tags:
         <p style="margin: 0 0 1rem 0; line-height: 1.6;">Ingeniero de Software en Aurora Solar. Entusiasta del desarrollo de tecnología, con particular interés en la Inteligencia Artificial y las tecnologías de código abierto. Disfruta de la exploración de temas técnicos y la participación activa en comunidades.</p>
         <div class="speaker-links">
             <a href="https://www.linkedin.com/in/cccaballero/" style="background: white; color: #667eea; padding: 0.5rem 1rem; border-radius: 25px; text-decoration: none; font-weight: 600; display: inline-block; margin-right: 1rem; transition: all 0.3s ease;"><i class="fab fa-linkedin"></i> LinkedIn</a>
-            
-            
+
+
         </div>
     </div>
 </div>
@@ -82,22 +82,22 @@ tags:
     <h3 style="margin: 0 0 1rem 0; color: #28a745;"><i class="fas fa-rocket"></i> Usando Python y software libre para crear nuevas herramientas: Traductor de voz español-inglés</h3>
     <p style="line-height: 1.8; font-size: 1.1rem; margin-bottom: 1.5rem;">Esta presentación muestra cómo combinar herramientas de software libre utilizando Python como lenguaje integrador para desarrollar soluciones funcionales y accesibles. A través del caso práctico de un traductor de voz español-inglés que opera completamente sin conexión, se exploran tecnologías abiertas como Vosk, Argos Translate y Coqui TTS.</p>
     <div class="tech-stack" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 1rem; margin: 1.5rem 0;">
-        
+
         <div style="background: white; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
             <h4 style="margin: 0 0 0.5rem 0; color: #007bff;"><i class="fas fa-microphone"></i> Vosk</h4>
             <p style="margin: 0; font-size: 0.9rem;">Reconocimiento de voz offline</p>
         </div>
-        
+
         <div style="background: white; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
             <h4 style="margin: 0 0 0.5rem 0; color: #28a745;"><i class="fas fa-globe"></i> Argos Translate</h4>
             <p style="margin: 0; font-size: 0.9rem;">Traducción neural offline</p>
         </div>
-        
+
         <div style="background: white; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
             <h4 style="margin: 0 0 0.5rem 0; color: #dc3545;"><i class="fas fa-volume-up"></i> Coqui TTS</h4>
             <p style="margin: 0; font-size: 0.9rem;">Síntesis de voz neural</p>
         </div>
-        
+
     </div>
     <p style="line-height: 1.8; font-size: 1.1rem; margin-top: 1.5rem;">Se destaca cómo Python permite orquestar estas herramientas de forma sencilla y potente, ejemplificando el potencial del ecosistema FLOSS para impulsar la innovación.</p>
 </div>
@@ -128,21 +128,21 @@ tags:
 ## Temas y Tecnologías
 <div class="tags-section" style="margin: 2rem 0;">
     <div style="display: flex; flex-wrap: wrap; gap: 0.5rem; justify-content: center;">
-        
+
         <a href="/tags/python/" style="background: #007bff; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fab fa-python"></i> Python</a>
-        
+
         <a href="/tags/software-libre/" style="background: #28a745; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-unlock"></i> Software Libre</a>
-        
+
         <a href="/tags/traducción/" style="background: #ffc107; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-globe"></i> Traducción</a>
-        
+
         <a href="/tags/vosk/" style="background: #17a2b8; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-microphone"></i> Vosk</a>
-        
+
         <a href="/tags/argos-translate/" style="background: #6f42c1; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-language"></i> Argos Translate</a>
-        
+
         <a href="/tags/coqui-tts/" style="background: #e83e8c; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-volume-up"></i> Coqui TTS</a>
-        
+
         <a href="/tags/open-source/" style="background: #fd7e14; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-box"></i> Open Source</a>
-        
+
     </div>
 </div>
 
@@ -170,7 +170,7 @@ tags:
     <a href="https://www.youtube.com/@PythonMexico" style="background: #ff0000; color: white; padding: 1rem; border-radius: 12px; text-decoration: none; text-align: center; font-weight: 600; transition: all 0.3s ease; display: flex; align-items: center; justify-content: center; gap: 0.5rem;">
         <i class="fab fa-youtube"></i> YouTube
     </a>
-    <a href="https://github.com/python-cdmx" style="background: #333; color: white; padding: 1rem; border-radius: 12px; text-decoration: none; text-align: center; font-weight: 600; transition: all 0.3s ease; display: flex; align-items: center; justify-content: center; gap: 0.5rem;">
+    <a href="https://github.com/PythonMexico/pythonCDMX" style="background: #333; color: white; padding: 1rem; border-radius: 12px; text-decoration: none; text-align: center; font-weight: 600; transition: all 0.3s ease; display: flex; align-items: center; justify-content: center; gap: 0.5rem;">
         <i class="fab fa-github"></i> GitHub
     </a>
 </div>
