--- a/docs/meetups/2024/202401-enero.md
+++ b/docs/meetups/2024/202401-enero.md
@@ -65,9 +65,9 @@ tags:
         <p style="margin: 0 0 1rem 0; font-size: 1.1rem; opacity: 0.9;">SRE Engineer</p>
         <p style="margin: 0 0 1rem 0; line-height: 1.6;">SRE Engineer en Wizeline con experiencia en gestión de ambientes y desarrollo Python.</p>
         <div class="speaker-links">
-            
-            
-            
+
+
+
         </div>
     </div>
 </div>
@@ -80,27 +80,27 @@ tags:
     <h3 style="margin: 0 0 1rem 0; color: #28a745;"><i class="fas fa-rocket"></i> Ambientes virtuales con venv, pyenv conda y poetry</h3>
     <p style="line-height: 1.8; font-size: 1.1rem; margin-bottom: 1.5rem;">En esta charla, exploraremos diferentes herramientas y enfoques para crear y gestionar ambientes virtuales en Python. Discutiremos sobre las ventajas de utilizar herramientas como venv, pyenv, conda y poetry para la creación y gestión de ambientes virtuales. ¡Únete a esta charla para descubrir las mejores prácticas y optimizar tus proyectos Python con ambientes virtuales eficientes y flexibles!</p>
     <div class="tech-stack" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 1rem; margin: 1.5rem 0;">
-        
+
         <div style="background: white; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
             <h4 style="margin: 0 0 0.5rem 0; color: #3776AB;"><i class="fab fa-python"></i> venv</h4>
             <p style="margin: 0; font-size: 0.9rem;">Ambientes virtuales</p>
         </div>
-        
+
         <div style="background: white; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
             <h4 style="margin: 0 0 0.5rem 0; color: #28a745;"><i class="fas fa-box"></i> pyenv</h4>
             <p style="margin: 0; font-size: 0.9rem;">Gestión de versiones</p>
         </div>
-        
+
         <div style="background: white; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
             <h4 style="margin: 0 0 0.5rem 0; color: #44A833;"><i class="fab fa-python"></i> conda</h4>
             <p style="margin: 0; font-size: 0.9rem;">Gestión de paquetes</p>
         </div>
-        
+
         <div style="background: white; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
             <h4 style="margin: 0 0 0.5rem 0; color: #60A5FA;"><i class="fas fa-book"></i> poetry</h4>
             <p style="margin: 0; font-size: 0.9rem;">Gestión de dependencias</p>
         </div>
-        
+
     </div>
     <p style="line-height: 1.8; font-size: 1.1rem; margin-top: 1.5rem;">Los ambientes virtuales son fundamentales para el desarrollo Python profesional y la gestión de dependencias.</p>
 </div>
@@ -131,19 +131,19 @@ tags:
 ## Temas y Tecnologías
 <div class="tags-section" style="margin: 2rem 0;">
     <div style="display: flex; flex-wrap: wrap; gap: 0.5rem; justify-content: center;">
-        
+
         <a href="/tags/python/" style="background: #3776AB; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fab fa-python"></i> Python</a>
-        
+
         <a href="/tags/venv/" style="background: #3776AB; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fab fa-python"></i> venv</a>
-        
+
         <a href="/tags/pyenv/" style="background: #28a745; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-box"></i> pyenv</a>
-        
+
         <a href="/tags/conda/" style="background: #44A833; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fab fa-python"></i> conda</a>
-        
+
         <a href="/tags/poetry/" style="background: #60A5FA; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-book"></i> poetry</a>
-        
+
         <a href="/tags/development/" style="background: #6c757d; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-laptop-code"></i> Development</a>
-        
+
     </div>
 </div>
 
@@ -171,7 +171,7 @@ tags:
     <a href="https://www.youtube.com/@PythonMexico" style="background: #ff0000; color: white; padding: 1rem; border-radius: 12px; text-decoration: none; text-align: center; font-weight: 600; transition: all 0.3s ease; display: flex; align-items: center; justify-content: center; gap: 0.5rem;">
         <i class="fab fa-youtube"></i> YouTube
     </a>
-    <a href="https://github.com/python-cdmx" style="background: #333; color: white; padding: 1rem; border-radius: 12px; text-decoration: none; text-align: center; font-weight: 600; transition: all 0.3s ease; display: flex; align-items: center; justify-content: center; gap: 0.5rem;">
+    <a href="https://github.com/PythonMexico/pythonCDMX" style="background: #333; color: white; padding: 1rem; border-radius: 12px; text-decoration: none; text-align: center; font-weight: 600; transition: all 0.3s ease; display: flex; align-items: center; justify-content: center; gap: 0.5rem;">
         <i class="fab fa-github"></i> GitHub
     </a>
 </div>
