--- a/docs/meetups/2024/202405-mayo.md
+++ b/docs/meetups/2024/202405-mayo.md
@@ -65,9 +65,9 @@ tags:
         <p style="margin: 0 0 1rem 0; font-size: 1.1rem; opacity: 0.9;">Python Developer</p>
         <p style="margin: 0 0 1rem 0; line-height: 1.6;">Desarrollador Python con experiencia en validación de datos y mejores prácticas de desarrollo.</p>
         <div class="speaker-links">
-            
-            
-            
+
+
+
         </div>
     </div>
 </div>
@@ -80,22 +80,22 @@ tags:
     <h3 style="margin: 0 0 1rem 0; color: #28a745;"><i class="fas fa-rocket"></i> Pydantic: Validaciones de Datos con Type Hints</h3>
     <p style="line-height: 1.8; font-size: 1.1rem; margin-bottom: 1.5rem;">Pydantic se ha vuelto uno de los módulos más populares de Python, permitiéndonos validar datos de una forma poderosa, simple, rápida y extensible. Funciona con nuestros Linters e IDEs utilizando solo Python.</p>
     <div class="tech-stack" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 1rem; margin: 1.5rem 0;">
-        
+
         <div style="background: white; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
             <h4 style="margin: 0 0 0.5rem 0; color: #E92063;"><i class="fas fa-check"></i> Pydantic</h4>
             <p style="margin: 0; font-size: 0.9rem;">Validación de datos</p>
         </div>
-        
+
         <div style="background: white; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
             <h4 style="margin: 0 0 0.5rem 0; color: #28a745;"><i class="fas fa-tag"></i> Type Hints</h4>
             <p style="margin: 0; font-size: 0.9rem;">Anotaciones de tipo</p>
         </div>
-        
+
         <div style="background: white; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
             <h4 style="margin: 0 0 0.5rem 0; color: #007bff;"><i class="fas fa-search"></i> Data Validation</h4>
             <p style="margin: 0; font-size: 0.9rem;">Validación de datos</p>
         </div>
-        
+
     </div>
     <p style="line-height: 1.8; font-size: 1.1rem; margin-top: 1.5rem;">Pydantic es una herramienta esencial para la validación de datos en aplicaciones Python modernas.</p>
 </div>
@@ -126,19 +126,19 @@ tags:
 ## Temas y Tecnologías
 <div class="tags-section" style="margin: 2rem 0;">
     <div style="display: flex; flex-wrap: wrap; gap: 0.5rem; justify-content: center;">
-        
+
         <a href="/tags/python/" style="background: #3776AB; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fab fa-python"></i> Python</a>
-        
+
         <a href="/tags/pydantic/" style="background: #E92063; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-check"></i> Pydantic</a>
-        
+
         <a href="/tags/type-hints/" style="background: #28a745; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-tag"></i> Type Hints</a>
-        
+
         <a href="/tags/data-validation/" style="background: #007bff; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-search"></i> Data Validation</a>
-        
+
         <a href="/tags/fastapi/" style="background: #009688; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-bolt"></i> FastAPI</a>
-        
+
         <a href="/tags/best-practices/" style="background: #ffc107; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-star"></i> Best Practices</a>
-        
+
     </div>
 </div>
 
@@ -166,7 +166,7 @@ tags:
     <a href="https://www.youtube.com/@PythonMexico" style="background: #ff0000; color: white; padding: 1rem; border-radius: 12px; text-decoration: none; text-align: center; font-weight: 600; transition: all 0.3s ease; display: flex; align-items: center; justify-content: center; gap: 0.5rem;">
         <i class="fab fa-youtube"></i> YouTube
     </a>
-    <a href="https://github.com/python-cdmx" style="background: #333; color: white; padding: 1rem; border-radius: 12px; text-decoration: none; text-align: center; font-weight: 600; transition: all 0.3s ease; display: flex; align-items: center; justify-content: center; gap: 0.5rem;">
+    <a href="https://github.com/PythonMexico/pythonCDMX" style="background: #333; color: white; padding: 1rem; border-radius: 12px; text-decoration: none; text-align: center; font-weight: 600; transition: all 0.3s ease; display: flex; align-items: center; justify-content: center; gap: 0.5rem;">
         <i class="fab fa-github"></i> GitHub
     </a>
 </div>
