--- a/docs/meetups/2025/202504-abril.md
+++ b/docs/meetups/2025/202504-abril.md
@@ -65,9 +65,9 @@ tags:
         <p style="margin: 0 0 1rem 0; font-size: 1.1rem; opacity: 0.9;">DevOps Engineer</p>
         <p style="margin: 0 0 1rem 0; line-height: 1.6;">Especialista en Kubernetes y MLOps con experiencia en despliegue de aplicaciones de IA.</p>
         <div class="speaker-links">
-            
-            
-            
+
+
+
         </div>
     </div>
 </div>
@@ -80,27 +80,27 @@ tags:
     <h3 style="margin: 0 0 1rem 0; color: #28a745;"><i class="fas fa-rocket"></i> El para qué cosa de Quien: Kubernetes y AI</h3>
     <p style="line-height: 1.8; font-size: 1.1rem; margin-bottom: 1.5rem;">En esta sesión veremos un RoadMap de herramientas que nos permiten desplegar modelos de AI, MLOps y aplicaciones de inteligencia artificial en un cluster de Kubernetes. El propósito es identificar los frameworks de AI y los casos de uso en los que podemos utilizarlos para empezar a crear nuestros modelos, entrenarlos, automatizarlos y obtener métricas. Algunas de las herramientas que veremos son: KubeFlow, KServe, TensorFlow, OpenVino, Jupyter, MLflow, Qdrant.</p>
     <div class="tech-stack" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 1rem; margin: 1.5rem 0;">
-        
+
         <div style="background: white; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
             <h4 style="margin: 0 0 0.5rem 0; color: #326CE5;"><i class="fab fa-docker"></i> Kubernetes</h4>
             <p style="margin: 0; font-size: 0.9rem;">Orquestación de contenedores</p>
         </div>
-        
+
         <div style="background: white; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
             <h4 style="margin: 0 0 0.5rem 0; color: #FF6B6B;"><i class="fas fa-robot"></i> KubeFlow</h4>
             <p style="margin: 0; font-size: 0.9rem;">MLOps platform</p>
         </div>
-        
+
         <div style="background: white; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
             <h4 style="margin: 0 0 0.5rem 0; color: #FF6F00;"><i class="fas fa-brain"></i> TensorFlow</h4>
             <p style="margin: 0; font-size: 0.9rem;">Machine Learning</p>
         </div>
-        
+
         <div style="background: white; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
             <h4 style="margin: 0 0 0.5rem 0; color: #019733;"><i class="fas fa-chart-bar"></i> MLflow</h4>
             <p style="margin: 0; font-size: 0.9rem;">ML lifecycle</p>
         </div>
-        
+
     </div>
     <p style="line-height: 1.8; font-size: 1.1rem; margin-top: 1.5rem;">Kubernetes proporciona una plataforma robusta para desplegar y gestionar aplicaciones de IA a escala.</p>
 </div>
@@ -131,19 +131,19 @@ tags:
 ## Temas y Tecnologías
 <div class="tags-section" style="margin: 2rem 0;">
     <div style="display: flex; flex-wrap: wrap; gap: 0.5rem; justify-content: center;">
-        
+
         <a href="/tags/python/" style="background: #3776AB; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fab fa-python"></i> Python</a>
-        
+
         <a href="/tags/kubernetes/" style="background: #326CE5; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fab fa-docker"></i> Kubernetes</a>
-        
+
         <a href="/tags/ai/" style="background: #FF6B6B; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-robot"></i> AI</a>
-        
+
         <a href="/tags/mlops/" style="background: #6f42c1; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-cog"></i> MLOps</a>
-        
+
         <a href="/tags/tensorflow/" style="background: #FF6F00; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-brain"></i> TensorFlow</a>
-        
+
         <a href="/tags/cloud-native/" style="background: #87CEEB; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-cloud"></i> Cloud Native</a>
-        
+
     </div>
 </div>
 
@@ -171,7 +171,7 @@ tags:
     <a href="https://www.youtube.com/@PythonMexico" style="background: #ff0000; color: white; padding: 1rem; border-radius: 12px; text-decoration: none; text-align: center; font-weight: 600; transition: all 0.3s ease; display: flex; align-items: center; justify-content: center; gap: 0.5rem;">
         <i class="fab fa-youtube"></i> YouTube
     </a>
-    <a href="https://github.com/python-cdmx" style="background: #333; color: white; padding: 1rem; border-radius: 12px; text-decoration: none; text-align: center; font-weight: 600; transition: all 0.3s ease; display: flex; align-items: center; justify-content: center; gap: 0.5rem;">
+    <a href="https://github.com/PythonMexico/pythonCDMX" style="background: #333; color: white; padding: 1rem; border-radius: 12px; text-decoration: none; text-align: center; font-weight: 600; transition: all 0.3s ease; display: flex; align-items: center; justify-content: center; gap: 0.5rem;">
         <i class="fab fa-github"></i> GitHub
     </a>
 </div>
