--- a/docs/meetups/2025/202505-mayo.md
+++ b/docs/meetups/2025/202505-mayo.md
@@ -63,9 +63,9 @@ tags:
         <p style="margin: 0 0 1rem 0; font-size: 1.1rem; opacity: 0.9;">Ingeniero en Sistemas Computacionales</p>
         <p style="margin: 0 0 1rem 0; line-height: 1.6;">Ingeniero en Sistemas Computacionales con Maestría en Ciencias de la Computación. A lo largo de su carrera ha ido desde el desarrollo de software como consultor al liderazgo de equipos de tecnología. Lleva 15 años desarrollando en Python. Actualmente es líder de Performance y DevOps en el sector microfinanciero. Le encanta compartir conocimiento y todo lo que involucre conocer, hacer y compartir Software libre.</p>
         <div class="speaker-links">
-            
-            
-            
+
+
+
         </div>
     </div>
 </div>
@@ -78,22 +78,22 @@ tags:
     <h3 style="margin: 0 0 1rem 0; color: #28a745;"><i class="fas fa-rocket"></i> Construyendo un paquete en Python y Publicándolo en PyPI</h3>
     <p style="line-height: 1.8; font-size: 1.1rem; margin-bottom: 1.5rem;">Tienes una gran idea, y estás listo para llevarla al público. ¿Cómo empezar? Eres un genio programando python. ¿Pero cómo haces para llevar tu código para que otros puedan usarlo? Algunos tips para: Configurar tu proyecto, Construir un paquete, Abrir una cuenta en PyPI, Publicar tu proyecto, Documentar tu proyecto, Consideraciones para compartir tu código.</p>
     <div class="tech-stack" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 1rem; margin: 1.5rem 0;">
-        
+
         <div style="background: white; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
             <h4 style="margin: 0 0 0.5rem 0; color: #FFD43B;"><i class="fas fa-box"></i> PyPI</h4>
             <p style="margin: 0; font-size: 0.9rem;">Python Package Index</p>
         </div>
-        
+
         <div style="background: white; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
             <h4 style="margin: 0 0 0.5rem 0; color: #3776AB;"><i class="fas fa-wrench"></i> setuptools</h4>
             <p style="margin: 0; font-size: 0.9rem;">Herramientas de empaquetado</p>
         </div>
-        
+
         <div style="background: white; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
             <h4 style="margin: 0 0 0.5rem 0; color: #28a745;"><i class="fas fa-upload"></i> twine</h4>
             <p style="margin: 0; font-size: 0.9rem;">Subida de paquetes</p>
         </div>
-        
+
     </div>
     <p style="line-height: 1.8; font-size: 1.1rem; margin-top: 1.5rem;">Aprende las mejores prácticas para compartir tu código Python con la comunidad a través de PyPI.</p>
 </div>
@@ -124,17 +124,17 @@ tags:
 ## Temas y Tecnologías
 <div class="tags-section" style="margin: 2rem 0;">
     <div style="display: flex; flex-wrap: wrap; gap: 0.5rem; justify-content: center;">
-        
+
         <a href="/tags/python/" style="background: #3776AB; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fab fa-python"></i> Python</a>
-        
+
         <a href="/tags/pypi/" style="background: #FFD43B; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-box"></i> PyPI</a>
-        
+
         <a href="/tags/packaging/" style="background: #28a745; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-box"></i> Packaging</a>
-        
+
         <a href="/tags/open-source/" style="background: #fd7e14; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-unlock"></i> Open Source</a>
-        
+
         <a href="/tags/devops/" style="background: #6f42c1; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-cog"></i> DevOps</a>
-        
+
     </div>
 </div>
 
@@ -162,7 +162,7 @@ tags:
     <a href="https://www.youtube.com/@PythonMexico" style="background: #ff0000; color: white; padding: 1rem; border-radius: 12px; text-decoration: none; text-align: center; font-weight: 600; transition: all 0.3s ease; display: flex; align-items: center; justify-content: center; gap: 0.5rem;">
         <i class="fab fa-youtube"></i> YouTube
     </a>
-    <a href="https://github.com/python-cdmx" style="background: #333; color: white; padding: 1rem; border-radius: 12px; text-decoration: none; text-align: center; font-weight: 600; transition: all 0.3s ease; display: flex; align-items: center; justify-content: center; gap: 0.5rem;">
+    <a href="https://github.com/PythonMexico/pythonCDMX" style="background: #333; color: white; padding: 1rem; border-radius: 12px; text-decoration: none; text-align: center; font-weight: 600; transition: all 0.3s ease; display: flex; align-items: center; justify-content: center; gap: 0.5rem;">
         <i class="fab fa-github"></i> GitHub
     </a>
 </div>
