--- a/docs/meetups/2025/202507-julio.md
+++ b/docs/meetups/2025/202507-julio.md
@@ -65,9 +65,9 @@ tags:
         <p style="margin: 0 0 1rem 0; font-size: 1.1rem; opacity: 0.9;">SRE Engineer</p>
         <p style="margin: 0 0 1rem 0; line-height: 1.6;">SRE Engineer en Wizeline con experiencia en contenedores y desarrollo Python.</p>
         <div class="speaker-links">
-            
-            
-            
+
+
+
         </div>
     </div>
 </div>
@@ -90,27 +90,27 @@ tags:
 
 Ven a platicar de estas y otras mejores prácticas con nosotros.</p>
     <div class="tech-stack" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 1rem; margin: 1.5rem 0;">
-        
+
         <div style="background: white; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
             <h4 style="margin: 0 0 0.5rem 0; color: #3776AB;"><i class="fab fa-python"></i> Python</h4>
             <p style="margin: 0; font-size: 0.9rem;">Lenguaje de programación</p>
         </div>
-        
+
         <div style="background: white; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
             <h4 style="margin: 0 0 0.5rem 0; color: #FF6B35;"><i class="fas fa-bolt"></i> UV</h4>
             <p style="margin: 0; font-size: 0.9rem;">Gestor de paquetes y entornos virtuales</p>
         </div>
-        
+
         <div style="background: white; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
             <h4 style="margin: 0 0 0.5rem 0; color: #FFD43B;"><i class="fas fa-download"></i> pip</h4>
             <p style="margin: 0; font-size: 0.9rem;">Gestor de paquetes de Python</p>
         </div>
-        
+
         <div style="background: white; padding: 1rem; border-radius: 8px; text-align: center; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
             <h4 style="margin: 0 0 0.5rem 0; color: #28A745;"><i class="fas fa-layer-group"></i> venv</h4>
             <p style="margin: 0; font-size: 0.9rem;">Entornos virtuales de Python</p>
         </div>
-        
+
     </div>
     <p style="line-height: 1.8; font-size: 1.1rem; margin-top: 1.5rem;">Nota: Basado en la página "Modern Good Practices for Python Development" de Stuart Ellis. Igual hay que preguntarle si se anima a darla él.</p>
 </div>
@@ -141,19 +141,19 @@ Ven a platicar de estas y otras mejores prácticas con nosotros.</p>
 ## Temas y Tecnologías
 <div class="tags-section" style="margin: 2rem 0;">
     <div style="display: flex; flex-wrap: wrap; gap: 0.5rem; justify-content: center;">
-        
+
         <a href="/tags/python/" style="background: #007bff; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fab fa-python"></i> Python</a>
-        
+
         <a href="/tags/software-libre/" style="background: #28a745; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-unlock"></i> Software Libre</a>
-        
+
         <a href="/tags/desarrollo/" style="background: #17a2b8; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-code"></i> Desarrollo</a>
-        
+
         <a href="/tags/herramientas/" style="background: #6f42c1; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-tools"></i> Herramientas</a>
-        
+
         <a href="/tags/buenas-prácticas/" style="background: #ffc107; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-star"></i> Buenas Prácticas</a>
-        
+
         <a href="/tags/devops/" style="background: #dc3545; color: white; padding: 0.5rem 1rem; border-radius: 20px; font-weight: 600; text-decoration: none; transition: all 0.3s ease;"><i class="fas fa-server"></i> DevOps</a>
-        
+
     </div>
 </div>
 
@@ -181,7 +181,7 @@ Ven a platicar de estas y otras mejores prácticas con nosotros.</p>
     <a href="https://www.youtube.com/@PythonMexico" style="background: #ff0000; color: white; padding: 1rem; border-radius: 12px; text-decoration: none; text-align: center; font-weight: 600; transition: all 0.3s ease; display: flex; align-items: center; justify-content: center; gap: 0.5rem;">
         <i class="fab fa-youtube"></i> YouTube
     </a>
-    <a href="https://github.com/python-cdmx" style="background: #333; color: white; padding: 1rem; border-radius: 12px; text-decoration: none; text-align: center; font-weight: 600; transition: all 0.3s ease; display: flex; align-items: center; justify-content: center; gap: 0.5rem;">
+    <a href="https://github.com/PythonMexico/pythonCDMX" style="background: #333; color: white; padding: 1rem; border-radius: 12px; text-decoration: none; text-align: center; font-weight: 600; transition: all 0.3s ease; display: flex; align-items: center; justify-content: center; gap: 0.5rem;">
         <i class="fab fa-github"></i> GitHub
     </a>
 </div>
